actually fixed the h1 alignment issue

--- a/_main-rules.scss
+++ b/_main-rules.scss
@@ -112,7 +112,7 @@ h1,
 h2,
 h3 {
     font-family: 'Montserrat', sans-serif;
-    text-transform: uppercase;
+        text-transform: uppercase;
 }
 
 h2 {
@@ -131,12 +131,16 @@ font-size: 2.5em;
     margin: 1em;
     background-color: #352D28;
     display: inline-block;
-    width: auto;
     padding: .5em 1em;
     border-radius: 1em;
     span {
         color: $yellow;
     }
+}
+
+header.section-title{
+    width:100%;
+    text-align:center;
 }
 
 /**************
